[project]
name = "hashfields"
dynamic = ["version"]
description = "Selectively hash, drop, or keep fields from a flat file (e.g. CSV)."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.11"
dependencies = [
    "pandas==2.0.3"
]

[project.urls]
Code = "https://github.com/cal-itp/hashfields"
Documentation = "https://docs.calitp.org/hashfields"
Issues = "https://github.com/cal-itp/hashfields/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit"
]
test = [
    "coverage",
    "pytest",
    "pytest-mock"
]
dist =[
    "build",
    "pyinstaller",
    "twine"
]

[project.scripts]
hashfields = "hashfields.main:main"

[build-system]
requires = ["setuptools>=65", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["hashfields"]

[tool.pyright]
include = ["hashfields", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.setuptools]
packages = ["hashfields"]

[tool.setuptools.dynamic]
version = {attr = "hashfields.__version__"}
